wip: Complete first attempt